--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,8 @@
     -->
     <title>Place to Stay</title>
     <script type = "text/javascript" src = "index.js"></script>
+    <script src="base64.js"></script>
+    <script type="text/javascript" src="//media.twiliocdn.com/sdk/js/client/v1.4/twilio.min.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
